# deep-learning-project

./: .gitignore  README.md  app.py  dataset.py  generate.py  model.py  pyproject.toml  requirements.txt  train.py
scripts/: setup.sh  train.sh
src/: train.py
src/dl_project/model/: SwinT.py  __init__.py  cnn.py  mobilenetv1.py  mobilenetv2.py  model.py
src/dl_project/train/: __main__.py
src/dl_project/utils/: __init__.py  dataset.py
src/model/: ViT.py  cnn.py  model.py  resnet.py
src/processing/: dataset.py
src/utils/: dataset.py  stat.py  statistic.py
